# flashrom_google

./: .gitignore  82802ab.c  CMakeLists.txt  Makefile  PRESUBMIT.cfg  README.chromiumos  a25.c  android.c  android.h  at25.c  atahpt.c  big_lock.c  big_lock.h  bitbang_spi.c  board_enable.c  buspirate_spi.c  cbtable.c  check.h  chipdrivers.h  chipset_enable.c  cli_classic.c  cli_mfg.c  cli_output.c  cros_ec.c  cros_ec.h  cros_ec_commands.h  cros_ec_dev.c  cros_ec_dev.h  cros_ec_i2c.c  cros_ec_lock.c  cros_ec_lock.h  cros_ec_lpc.c  dediprog.c  dmi.c  drkaiser.c  dummyflasher.c  ene_lpc.c  fdtmap.c  fdtmap.h  file.c  (+91 more)
tests/: fdt_test.py  tests.py
tests/tests_v1/: partial_reads.sh  partial_writes_ec.sh  partial_writes_x86_bios.sh  wp-range.sh  wp-toggle.sh
tests/tests_v2/: cmd.sh  servo_hooks.sh  servo_wp_hooks.sh  servo_wp_hooks_jaq.sh  test_v2.sh
util/: README  chip_size.sh  common.sh  do_tests.sh  getrevision.sh  getversion.sh  partial_writes_ec.sh  partial_writes_x86_bios.sh  use_big_lock.sh  wp-range.sh  wp-toggle.sh
util/git-hooks/: pre-push
util/ich_descriptors_tool/: Makefile  TODO  ich_descriptors_tool.c
