cmake_minimum_required(VERSION 3.9)
project(flashrom_google)

# Using C89/C90 standard, treat warnings as errors
set(CMAKE_C_STANDARD 90)
set(CMAKE_C_FLAGS "-Werror ")

add_executable(flashrom
        82802ab.c
        a25.c
        amd_imc.c
        android.c
        android.h
        archtest.c
        at25.c
        atahpt.c
        big_lock.c
        big_lock.h
        bitbang_spi.c
        board_enable.c
        buspirate_spi.c
        cbtable.c
        check.h
        chipdrivers.h
        chipset_enable.c
        cli_classic.c
        cli_mfg.c
        cli_output.c
        coreboot_tables.h
        dediprog.c
        dmi.c
        drkaiser.c
        dummyflasher.c
        ene_lpc.c
        fdtmap.c
        fdtmap.h
        file.c
        file.h
        file_lock.c
        flash.h
        flashchips.c
        flashchips.h
        flashrom.c
        fmap.c
        fmap.h
        ft2232_spi.c
        gfxnvidia.c
        hwaccess.c
        hwaccess.h
        ich_descriptors.c
        ich_descriptors.h
        ichspi.c
        internal.c
        ipc_lock.h
        it85spi.c
        it87spi.c
        jedec.c
        layout.c
        layout.h
        linux_i2c.c
        linux_mtd.c
        linux_spi.c
        locks.h
        m29f400bt.c
        mcp6x_spi.c
        mec1308.c
        nic3com.c
        nicintel.c
        nicintel_spi.c
        nicnatsemi.c
        nicrealtek.c
        ogp_spi.c
        opaque.c
        os.h
        pcidev.c
        physmap.c
        platform.h
        pm49fl00x.c
        print.c
        print_wiki.c
        processor_enable.c
        programmer.c
        programmer.h
        raiden_debug_spi.c
        rayer_spi.c
        s25f.c
        satamv.c
        satasii.c
        sb600spi.c
        search.c
        search.h
        serial.c
        serprog.c
        serprog.h
        sharplhf00l04.c
        spi.c
        spi.h
        spi25.c
        spi4ba.c
        spi4ba.h
        sst28sf040.c
        sst49lfxxxc.c
        sst_fwhub.c
        stm50flw0x0x.c
        udelay.c
        usb_device.c
        usb_device.h
        w29ee011.c
        w39.c
        wbsio_spi.c
        wpce775x.c
        writeprotect.c
        writeprotect.h)
